--- a/vue/styles/style.css
+++ b/vue/styles/style.css
@@ -214,11 +214,15 @@
     perspective:1000px;
     box-shadow: 0 6px 22px rgba(0,0,0,0.6);
     overflow:visible;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
 
   .card .icon{
-    width:64px;
-    height:64px;
+    width:60px;
+    height:60px;
     border-radius:12px;
     display:grid;
     place-items:center;
@@ -237,7 +241,19 @@
     font-size:0.95rem;
     line-height:1.4;
 }
-
+ .card img{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    object-fit: cover;
+  }
+  .card .alignements_icones{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5px;
+    cursor: pointer;
+  }
   /* neon outline glow (animated) */
   .neon-outline{
     position:absolute;inset:-2px;border-radius:14px;
