--- a/vue/styles/style.css
+++ b/vue/styles/style.css
@@ -187,7 +187,9 @@
     align-items:center;
     justify-content:center;
   }
-
+  .hero-right a{
+    text-decoration: none;
+  }
   /* =========================
      Feature cards grid
      ========================= */
@@ -196,6 +198,9 @@
     grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     gap:20px;
     margin-top:6px;
+  }
+  .grid a{
+    text-decoration: none;
   }
 
   .card{
@@ -230,6 +235,14 @@
     border:1px solid rgba(255,255,255,0.04);
     box-shadow: 0 6px 18px rgba(0,0,0,0.5);
     position:relative;
+  }
+  .card .alignements_icones{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 5px;
+    cursor: pointer;
+     color: gold;
   }
 
   .card h3{
@@ -279,7 +292,7 @@
 /* =========================
      profil
      ========================= */
-.user_message > div{
+.user_message > a div{
   width: 20px;
   height: 20px;
   background: var(--neon);
@@ -388,3 +401,65 @@
          animation:none!important;
     }
   }
+
+
+
+  
+/* =========================
+     Data-tooltip
+     ========================= */
+
+
+  .panier{
+       position: relative;
+    }
+    .panier:hover::after{
+        position: absolute;
+        content: attr(data-tooltip);
+        padding: 2px 10px;
+        text-align: center;
+        top: 25px;
+        left: -15px;
+        font-size: 13px;
+        color: white;
+        border-radius: 2px;
+        color:  rgba(0,0,0,0.7);
+        transition: transform 0.3;
+        background-color: #fff;
+        
+    }
+    
+     .notification{
+        position: relative;
+    }
+    .notification:hover::after{
+        position: absolute;
+        content: attr(data-tooltip);
+        padding: 2px 5px;
+        text-align: center;
+        top: 25px;
+        left: -15px;
+        font-size: 13px;
+        color: white;
+        border-radius: 5px;
+        color:  rgba(0,0,0,0.7);
+        background-color: #fff;
+    }
+    
+    .profil{
+        position: relative;
+    }
+    .profil:hover::after{
+        position: absolute;
+        content: attr(data-tooltip);
+        padding: 2px 10px;
+        text-align: center;
+        top: 25px;
+        left: -15px;
+        font-size: 13px;
+        color: white;
+        border-radius: 5px;
+        color:  rgba(0,0,0,0.7);
+        background-color: #fff;
+        border:1px solid rgba(224, 10, 10, 0.06);
+    }
