--- a/vue/styles/stylemenu.css
+++ b/vue/styles/stylemenu.css
@@ -56,7 +56,7 @@
     height: 100%;
     background-color: #05f07a;  
     border-radius: 0 0 0 10px;  
-    }
+    }/*
   
     ul{
         list-style: none;
@@ -99,7 +99,7 @@
          font-size: 17px;
         font-weight: 400;
      }
-
+*/
 main{
     flex: 1;
     background-color: rgb(207, 202, 202); 
@@ -217,3 +217,45 @@ main{
     align-items: center;
     flex: 1;
 }
+
+
+
+ /* =========================
+    interface equipements
+     ========================= */
+.equipement_admin{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100vh;
+    }
+   .contain{
+        display: flex;
+        flex-direction: column;
+        border-radius: 10px;
+        display: flex;
+        width:95%;
+        align-items: center;
+        height: 90vh;
+        justify-content: center;
+    }
+
+     /* =========================
+     Canvas particles (full page)
+     ========================= */
+
+
+     
+      /* =========================
+     Canvas particles (full page)
+     ========================= */
+      /* =========================
+     Canvas particles (full page)
+     ========================= */
+      /* =========================
+     Canvas particles (full page)
+     ========================= */
+      /* =========================
+     Canvas particles (full page)
+     ========================= */
